[package]
name = "link-cplusplus"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"

[build-dependencies]
cc = "1.0"

[features]
default = [] # automatic
libstdcxx = [] # force libstdc++
libcxx = [] # force libc++
nothing = [] # link nothing, determined somewhere else
