[package]
name = "link-cplusplus"
version = "1.0.7"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["external-ffi-bindings", "development-tools::ffi", "compilers", "no-std"]
description = "Link libstdc++ or libc++ automatically or manually"
documentation = "https://docs.rs/link-cplusplus"
edition = "2018"
keywords = ["linkage", "c++"]
license = "MIT OR Apache-2.0"
links = "cplusplus"
readme = "README.md"
repository = "https://github.com/dtolnay/link-cplusplus"
rust-version = "1.34"

[build-dependencies]
cc = "1.0"

[features]
default = [] # automatic
"libstdc++" = [] # force libstdc++
"libc++" = [] # force libc++
nothing = [] # link nothing, determined somewhere else

# deprecated aliases
libstdcxx = ["libstdc++"]
libcxx = ["libc++"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
